# climp

./: CMakeLists.txt  FindGStreamer.cmake  README.md
src/: climp_player.c  climp_player.h  main.c
src/client/: client.c  client.h  climpd.c  climpd.h  climpd_control.c  climpd_control.h  main.c
src/climp/: CMakeLists.txt  main.c
src/climp-discoverer/: CMakeLists.txt  main.c
src/climp-log/: CMakeLists.txt  main.c
src/climpd/: CMakeLists.txt  main.c
src/climpd/core/: argument-parser.c  argument-parser.h  climpd-config.c  climpd-config.h  climpd-log.c  climpd-log.h  climpd-paths.c  climpd-paths.h  climpd-player.c  climpd-player.h  daemonize.c  daemonize.h  mainloop.c  mainloop.h  media-discoverer.c  media-discoverer.h  media-loader.c  media-loader.h  socket.c  socket.h  terminal-color-map.c  util.c  util.h
src/climpd/core/audio-player/: audio-player.c  audio-player.h  gst-engine.c  gst-engine.h
src/climpd/core/media-player/: .media-discoverer.h.kate-swp  kfy.c  kfy.h  media-discoverer.c  media-discoverer.h  media-player.c  media-player.h  playlist.c  playlist.h
src/climpd/core/playlist/: kfy.c  playlist.c  playlist.h  tag-reader.c  tag-reader.h
src/climpd/ipc/: socket-server.c  socket-server.h
src/climpd/media/: media.c  media.h  uri.c  uri.h
src/climpd/util/: bool.c  bool.h  strconvert.c  strconvert.h
src/server/: bool-map.c  client.c  client.h  climp_player.c  climp_player.h  climpd-config.c  climpd-config.h  climpd-log.c  climpd-log.h  climpd-player.c  climpd-player.h  color.h  config.c  config.h  main.c  media_player.c  media_player.h  playlist-manager.c  playlist-manager.h  terminal-color-map.c  terminal-color-map.h  tests.c
src/server/core/: bool-map.c  bool-map.h  climpd-config.c  climpd-config.h  climpd-control.c  climpd-control.h  climpd-log.c  climpd-log.h  climpd-paths.c  climpd-paths.h  climpd-player.c  climpd-player.h  kfy.c  kfy.h  mainloop.c  media-creator.c  media-creator.h  media-discoverer.c  media-discoverer.h  media-list.c  media-list.h  media-loader.c  media-manager.c  media-manager.h  media-scheduler.c  media-scheduler.h  media.c  media.h  media_list_loader.c  media_list_loader.h  message-handler.c  message-handler.h  playlist-manager.c  playlist-manager.h  playlist.c  playlist.h  socket.c  terminal-color-map.c  terminal-color-map.h  util.c  (+1 more)
src/server/media-objects/: media-player.c  media-player.h  media.c  media.h
src/server/media-player/: media-player.h  media.c  media.h  playlist.c  playlist.h
src/server/media_player/: media.c  media.h  media_player.c  media_player.h  playlist.c  playlist.h  playlist_iterator.c  playlist_iterator.h
src/server/util/: bool-map.c  bool-map.h  climpd-log.c  climpd-log.h  terminal-color-map.c
src/shared/: constants.h  ipc.c  ipc.h  util.c  util.h
src/tests/: CMakeLists.txt  audio_player_test.c  daemonize_test.c  media_loader_test.c  media_player_test.c  playlist_test.c
